Add import files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Simply Chocolate</title>
   </head>
   <body></body>
 </html>
