--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Simply Chocolate</title>
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
