Finish mobile hero

--- a/index.html
+++ b/index.html
@@ -21,7 +21,28 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-wrapper">
+            <h1 class="hero-title">
+              Treat yourself or a loved one to our finest ingredients for a
+              moment of pure delight!
+            </h1>
+            <div class="hero-btns">
+              <button class="btn">Buy now</button>
+              <a href="#" class="btn-primary">How it’s made</a>
+              <button class="scroll">
+                scroll down
+                <svg width="24" height="24" class="scroll-svg">
+                  <use href="./img/icons.svg#icon-down-arrow" />
+                </svg>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
