Finish hero-tablet

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
               moment of pure delight!
             </h1>
             <div class="hero-btns">
-              <button class="btn">Buy now</button>
-              <a href="#" class="btn-primary">How it’s made</a>
+              <div>
+                <button class="btn">Buy now</button>
+                <a href="#" class="btn-primary">How it’s made</a>
+              </div>
               <button class="scroll">
                 scroll down
                 <svg width="24" height="24" class="scroll-svg">
