--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="preload"
+      fetchpriority="high"
+      as="image"
+      href="./img/hero/hero-mobile.webp"
+      type="image/webp"
+    />
+    <link
+      rel="preload"
+      fetchpriority="high"
+      as="image"
+      href="./img/hero/hero-mobile@2x.webp"
+      type="image/webp"
+    />
     <title>Simply Chocolate</title>
   </head>
   <body>
