--- a/index.html
+++ b/index.html
@@ -8,13 +8,6 @@
       rel="preload"
       fetchpriority="high"
       as="image"
-      href="./img/hero/hero-mobile.webp"
-      type="image/webp"
-    />
-    <link
-      rel="preload"
-      fetchpriority="high"
-      as="image"
       href="./img/hero/hero-mobile@2x.webp"
       type="image/webp"
     />
@@ -43,6 +36,57 @@
               </button>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="section about">
+        <div class="container">
+          <h2 class="visually-hidden">About us</h2>
+          <ul class="about-list">
+            <li class="about-item">
+              <div class="about-icon-wrapper">
+                <svg class="about-icon" width="32" height="32">
+                  <use href="./img/icons.svg#icon-chocolate" />
+                </svg>
+              </div>
+              <h3 class="about-subtitle">Unsurpassed taste</h3>
+              <p class="about-text">
+                Crafted with the finest quality cocoa beans and a dedication to
+                perfection, each bite is a decadent experience that simply
+                cannot be matched. Savor the richness and complexity of our
+                Unsurpassed Taste and discover a new level of chocolate bliss.
+              </p>
+            </li>
+            <li class="about-item">
+              <div class="about-icon-wrapper">
+                <svg class="about-icon" width="32" height="32">
+                  <use href="./img/icons.svg#icon-coin" />
+                </svg>
+              </div>
+
+              <h3 class="about-subtitle">Affordable price</h3>
+              <p class="about-text">
+                Indulge in high-quality chocolate without breaking the bank with
+                Simply Chocolate's selection of affordable treats. Enjoy
+                mouth-watering truffles and velvety chocolate bars without
+                sacrificing taste or quality. Browse our selection and indulge
+                in affordable luxury today.
+              </p>
+            </li>
+            <li class="about-item">
+              <div class="about-icon-wrapper">
+                <svg class="about-icon" width="32" height="32">
+                  <use href="./img/icons.svg#icon-spoon" />
+                </svg>
+              </div>
+              <h3 class="about-subtitle">Own production</h3>
+              <p class="about-text">
+                We take pride in our own production process, ensuring that every
+                step is carefully crafted to perfection. From selecting the
+                finest ingredients to handcrafting each piece, our attention to
+                detail is evident in every bite.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
