--- a/index.html
+++ b/index.html
@@ -89,6 +89,202 @@
           </ul>
         </div>
       </section>
+      <section class="section taste">
+        <div class="container">
+          <h2 class="title">
+            IT ALL ADDS UP TO ONE EXCEPTIONAL
+            <span class="text-accent">TASTE</span> SENSATION
+          </h2>
+          <ul class="taste-list">
+            <li class="taste-item">
+              <img
+                srcset="
+                  ./img/taste/milk-chocolate.webp    1x,
+                  ./img/taste/milk-chocolate@2x.webp 2x
+                "
+                src="./img/taste/milk-chocolate@2x.webp"
+                alt="milk chocolate"
+                class="taste-img"
+                width="236px"
+                height="176px"
+              />
+              <h3 class="taste-subtitle">MILK CHOCOLATE</h3>
+              <div class="taste-descr">
+                <h3 class="taste-subtitle-big">Milk chocolate</h3>
+                <div class="taste-descr-tags">
+                  <span class="taste-descr-tag-bg">chocolate</span>
+                  <span class="taste-descr-tag">the benefits</span>
+                </div>
+                <p class="taste-descr-text">
+                  Milk chocolate is a solid chocolate confectionery containing
+                  cocoa, sugar and milk. It is the most consumed type of
+                  chocolate. Chocolate was originally sold and consumed as a
+                  beverage in pre-Columbian times. Although four-fifths of all
+                  milk chocolate is sold in the United States and Europe.
+                </p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                srcset="./img/taste/milk.webp 1x, ./img/taste/milk@2x.webp 2x"
+                src="./img/taste/milk@2x.webp"
+                alt="milk"
+                class="taste-img"
+                width="236px"
+                height="176px"
+              />
+              <h3 class="taste-subtitle">MILK</h3>
+              <div class="taste-descr">
+                <h3 class="taste-subtitle-big">MILK</h3>
+                <div class="taste-descr-tags">
+                  <span class="taste-descr-tag-bg">milk</span>
+                  <span class="taste-descr-tag">the benefits</span>
+                </div>
+                <p class="taste-descr-text">
+                  Milk is a white liquid food produced by the mammary glands of
+                  mammals. It is the primary source of nutrition for young
+                  mammals (including breastfed human infants) before they are
+                  able to digest solid food.Early-lactation milk, which is
+                  called colostrum, contains...
+                </p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                srcset="./img/taste/nuts.webp 1x, ./img/taste/nuts@2x.webp 2x"
+                src="./img/taste/nuts@2x.webp"
+                alt="nuts"
+                class="taste-img"
+                width="236px"
+                height="176px"
+              />
+              <h3 class="taste-subtitle">NUTS</h3>
+              <div class="taste-descr">
+                <h3 class="taste-subtitle-big">NUTS</h3>
+                <div class="taste-descr-tags">
+                  <span class="taste-descr-tag-bg">nuts</span>
+                  <span class="taste-descr-tag">the benefits</span>
+                </div>
+                <p class="taste-descr-text">
+                  Almonds, pistachios, and walnuts are some types of nuts that
+                  contain healthy nutrients. When eaten as part of a
+                  nutrient-dense diet, these 9 nuts may offer benefits such as
+                  reducing your risk of heart disease. They’re a good source of
+                  fiber, healthy fats, and plant protein. Plus, they’re...
+                </p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                srcset="
+                  ./img/taste/semi-sweet-chocolate.webp    1x,
+                  ./img/taste/semi-sweet-chocolate@2x.webp 2x
+                "
+                src="./img/taste/semi-sweet-chocolate@2x.webp"
+                alt="semi sweet chocolate"
+                class="taste-img"
+                width="236px"
+                height="176px"
+              />
+              <h3 class="taste-subtitle">SEMI - SWEET CHOCOLATE</h3>
+              <div class="taste-descr">
+                <h3 class="taste-subtitle-big">semi - sweet chocolate</h3>
+                <div class="taste-descr-tags">
+                  <span class="taste-descr-tag-bg">sweet chocolate</span>
+                  <span class="taste-descr-tag">the benefits</span>
+                </div>
+                <p class="taste-descr-text">
+                  Semi-sweet chocolate has a cocoa solid content of 35 to 65%.
+                  One of the best ways to gain an understanding of this type of
+                  chocolate is to compare it to a different type of chocolate.
+                  Semisweet is darker than milk...
+                </p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                srcset="./img/taste/cacao.webp 1x, ./img/taste/cacao@2x.webp 2x"
+                src="./img/taste/cacao@2x.webp"
+                alt="cacao"
+                class="taste-img"
+                width="236px"
+                height="176px"
+              />
+              <h3 class="taste-subtitle">CACAO</h3>
+              <div class="taste-descr">
+                <h3 class="taste-subtitle-big">Cacao</h3>
+                <div class="taste-descr-tags">
+                  <span class="taste-descr-tag-bg">cacao</span>
+                  <span class="taste-descr-tag">the benefits</span>
+                </div>
+                <p class="taste-descr-text">
+                  Cocoa is a natural product obtained from the fruits of the
+                  cocoa tree (Theobroma cacao). This tropical fruit contains
+                  beans, from which cocoa mass, cocoa powder and chocolate are
+                  made. The history of the use of cocoa goes back to ancient
+                  times. Already in ancient Mesoamerica...
+                </p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                srcset="
+                  ./img/taste/raspberry.webp    1x,
+                  ./img/taste/raspberry@2x.webp 2x
+                "
+                src="./img/taste/raspberry@2x.webp"
+                alt="raspberry"
+                class="taste-img"
+                width="236px"
+                height="176px"
+              />
+              <h3 class="taste-subtitle">RASPBERRY</h3>
+              <div class="taste-descr">
+                <h3 class="taste-subtitle-big">Raspberry</h3>
+                <div class="taste-descr-tags">
+                  <span class="taste-descr-tag-bg">raspberry</span>
+                  <span class="taste-descr-tag">the benefits</span>
+                </div>
+                <p class="taste-descr-text">
+                  Raspberry is a tasty and aromatic berry plant that is popular
+                  all over the world. It belongs to the pink family and grows in
+                  many regions, including North America, Europe and Asia.
+                  Raspberries have many varieties and color variations, from red
+                  to yellow and black.
+                </p>
+              </div>
+            </li>
+            <li class="taste-item">
+              <img
+                srcset="
+                  ./img/taste/coconut-oil.webp    1x,
+                  ./img/taste/coconut-oil@2x.webp 2x
+                "
+                src="./img/taste/coconut-oil@2x.webp"
+                alt="raspberry"
+                class="taste-img"
+                width="236px"
+                height="176px"
+              />
+              <h3 class="taste-subtitle">COCONUT OIL</h3>
+              <div class="taste-descr">
+                <h3 class="taste-subtitle-big">COCONUT OIL</h3>
+                <div class="taste-descr-tags">
+                  <span class="taste-descr-tag-bg">coconut oil</span>
+                  <span class="taste-descr-tag">the benefits</span>
+                </div>
+                <p class="taste-descr-text">
+                  Coconut oil is a vegetable oil obtained from the pulp of the
+                  fruit of the coconut palm (Cocos nucifera). It is widely used
+                  in cooking, cosmetics and medicine, thanks to its numerous
+                  useful properties. Coconut oil is a source of saturated fats,
+                  especially medium-chain fatty acids, such...
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
