Finish made section

--- a/index.html
+++ b/index.html
@@ -285,6 +285,63 @@
           </ul>
         </div>
       </section>
+      <section class="section made">
+        <div class="container">
+          <h2 class="title">hOW IT’S <span class="text-accent">made?</span></h2>
+          <div class="made-container">
+            <div class="made-img-wrapper">
+              <picture>
+                <source
+                  srcset="
+                    ./img/made/made-mobile.webp    1x,
+                    ./img/made/made-mobile@2x.webp 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <source
+                  srcset="./img/made/made.webp 1x, ./img/made/made@2x.webp 2x"
+                  media="(min-width: 768px)"
+                />
+                <img
+                  class="made-img"
+                  src="./img/made/made.webp"
+                  alt="how it's made video"
+                />
+              </picture>
+              <svg width="35" height="35" class="play-svg">
+                <use href="./img/icons.svg#icon-play" />
+              </svg>
+            </div>
+            <div class="made-descr">
+              <h3 class="made-subtitle">
+                Try our chocolates today and discover the perfect balance of
+                flavor
+              </h3>
+              <ul class="made-list">
+                <li class="made-item">
+                  Heat the milk in a saucepan without bringing it to a boil. Add
+                  sugar and cocoa powder.
+                </li>
+                <li class="made-item">
+                  At the same time, prepare a water bath. Melt the butter on it.
+                </li>
+                <li class="made-item">
+                  "Mix" the milk mixture and already liquid butter. Mix
+                  thoroughly with a silicone spatula so that the mass becomes
+                  uniform and silky.
+                </li>
+                <li class="made-item">
+                  Heat the mixture over low heat, letting it barely boil.
+                </li>
+                <li class="made-item">
+                  Pour the chocolate into special containers (can be replaced
+                  with ice molds). Allow to cool and harden.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
