--- a/index.html
+++ b/index.html
@@ -342,6 +342,125 @@
           </div>
         </div>
       </section>
+      <section class="section product">
+        <div class="container">
+          <h2 class="title">our <span class="text-accent">pRODUCTS</span></h2>
+          <ul class="product-list">
+            <li class="prodcut-item">
+              <img
+                srcset="
+                  ./img/products/orange.webp    1x,
+                  ./img/products/orange@2x.webp 2x
+                "
+                src="./img/products/orange.webp"
+                alt="Dark chocolate"
+                class="product-img"
+              />
+              <h3 class="product-subtitle">orange</h3>
+              <p class="product-descr">Dark chocolate</p>
+              <button type="button" class="product-btn">45 UAH</button>
+            </li>
+            <li class="prodcut-item">
+              <img
+                srcset="
+                  ./img/products/apple-cranberry.webp    1x,
+                  ./img/products/apple-cranberry@2x.webp 2x
+                "
+                src="./img/products/apple-cranberry.webp"
+                alt="Milk chocolate"
+                class="product-img"
+              />
+              <h3 class="product-subtitle">APPLE&CRANBERRY</h3>
+              <p class="product-descr">Milk chocolate</p>
+              <button type="button" class="product-btn">50 UAH</button>
+            </li>
+            <li class="prodcut-item">
+              <img
+                srcset="
+                  ./img/products/lime-sea-salt.webp    1x,
+                  ./img/products/lime-sea-salt@2x.webp 2x
+                "
+                src="./img/products/lime-sea-salt.webp"
+                alt="Dark chocolate"
+                class="product-img"
+              />
+              <h3 class="product-subtitle">lime&sea salt</h3>
+              <p class="product-descr">Dark chocolate</p>
+              <button type="button" class="product-btn">66 UAH</button>
+            </li>
+            <li class="prodcut-item">
+              <img
+                srcset="
+                  ./img/products/pineapple.webp    1x,
+                  ./img/products/pineapple@2x.webp 2x
+                "
+                src="./img/products/pineapple.webp"
+                alt="Dark chocolate"
+                class="product-img"
+              />
+              <h3 class="product-subtitle">pineapple</h3>
+              <p class="product-descr">Dark chocolate</p>
+              <button type="button" class="product-btn">54 UAH</button>
+            </li>
+            <li class="prodcut-item">
+              <img
+                srcset="
+                  ./img/products/classic.webp    1x,
+                  ./img/products/classic@2x.webp 2x
+                "
+                src="./img/products/classic.webp"
+                alt="Milk chocolate"
+                class="product-img"
+              />
+              <h3 class="product-subtitle">Classic</h3>
+              <p class="product-descr">Milk chocolate</p>
+              <button type="button" class="product-btn">45 UAH</button>
+            </li>
+            <li class="prodcut-item">
+              <img
+                srcset="
+                  ./img/products/honey.webp    1x,
+                  ./img/products/honey@2x.webp 2x
+                "
+                src="./img/products/honey.webp"
+                alt="Milk chocolate"
+                class="product-img"
+              />
+              <h3 class="product-subtitle">honey</h3>
+              <p class="product-descr">Milk chocolate</p>
+              <button type="button" class="product-btn">50 UAH</button>
+            </li>
+            <li class="prodcut-item">
+              <img
+                srcset="
+                  ./img/products/roasted-fruits.webp    1x,
+                  ./img/products/roasted-fruits@2x.webp 2x
+                "
+                src="./img/products/roasted-fruits.webp"
+                alt="Dark chocolate"
+                class="product-img"
+              />
+              <h3 class="product-subtitle">Roasted fruits</h3>
+              <p class="product-descr">Dark chocolate</p>
+              <button type="button" class="product-btn">66 UAH</button>
+            </li>
+            <li class="prodcut-item">
+              <img
+                srcset="
+                  ./img/products/classic-white.webp    1x,
+                  ./img/products/classic-white@2x.webp 2x
+                "
+                src="./img/products/classic-white.webp"
+                alt="White chocolate"
+                class="product-img"
+              />
+              <h3 class="product-subtitle">Classic</h3>
+              <p class="product-descr">White chocolate</p>
+              <button type="button" class="product-btn">54 UAH</button>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
