--- a/index.html
+++ b/index.html
@@ -530,6 +530,60 @@
           </ul>
         </div>
       </section>
+      <section class="section reviews">
+        <div class="container">
+          <h2 class="title reviews-title">
+            <span class="text-accent">chocolate</span> is loved
+          </h2>
+          <ul class="reviews-list">
+            <li class="reviews-item">
+              <img
+                srcset="
+                  ./img/loved/victoria.webp    1x,
+                  ./img/loved/victoria@2x.webp 2x
+                "
+                src="./img/loved/victoria.webp"
+                alt="Victoria Dobrzhanska"
+                class="reviews-img"
+              />
+              <h3 class="reviews-name">Victoria Dobrzhanska</h3>
+              <p class="reviews-descr">
+                I love this chocolate bar. Perfect combination of light crispy
+                wafer, covered in a thin layer chocolate.
+              </p>
+            </li>
+            <li class="reviews-item">
+              <img
+                srcset="./img/loved/nazar.webp 1x, ./img/loved/nazar@2x.webp 2x"
+                src="./img/loved/nazar.webp"
+                alt="Nazar Babenko"
+                class="reviews-img"
+              />
+              <h3 class="reviews-name">Nazar Babenko</h3>
+              <p class="reviews-descr">
+                This chocolate confection is a delight! A delight! The wafer is
+                light and crisp, the hazelnut cream is smooth, and the chocolate
+                is good.
+              </p>
+            </li>
+            <li class="reviews-item">
+              <img
+                srcset="./img/loved/olena.webp 1x, ./img/loved/olena@2x.webp 2x"
+                src="./img/loved/olena.webp"
+                alt="Olena Kampusch"
+                class="reviews-img"
+              />
+              <h3 class="reviews-name">Olena Kampusch</h3>
+              <p class="reviews-descr">
+                Chocolate is a family favourite treat. Love the delicious smooth
+                chocolate and the creaminess inside. The wafer is soft but
+                crunchy.
+              </p>
+            </li>
+          </ul>
+          <button class="reviews-btn">Leave a review</button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
