--- a/index.html
+++ b/index.html
@@ -585,6 +585,82 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="container footer-container">
+        <div class="footer-wrapper">
+          <h2 class="title footer-title">
+            <span class="text-accent">Chocolate</span> a delicious cure for a
+            bad day
+          </h2>
+          <div class="footer-contacts-wrapper">
+            <div class="footer-contacts">
+              <h3 class="footer-subtitle">Contact us</h3>
+              <a class="footer-contact footer-phone" href="tel:+380684439426"
+                >+380 (68) 443-94-26</a
+              >
+              <a
+                class="footer-contact footer-phone"
+                href="mailto:simplychoc@gmail.com"
+                >simplychoc@gmail.com</a
+              >
+            </div>
+            <div class="footer-social">
+              <h3 class="footer-subtitle">Social networks</h3>
+              <ul class="footer-icons">
+                <li>
+                  <a class="footer-icon" href="#">
+                    <svg width="20" height="20">
+                      <use href="./img/icons.svg#icon-instagram" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="footer-icon" href="#">
+                    <svg width="20" height="20">
+                      <use href="./img/icons.svg#icon-facebook" />
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a class="footer-icon" href="#">
+                    <svg width="20" height="20">
+                      <use href="./img/icons.svg#icon-twitter" />
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-divider"></div>
+        <div class="footer-wrapper flex-center">
+          <ul class="footer-nav">
+            <li class="footer-item">
+              <a href="#" class="footer-link">Home</a>
+            </li>
+            <li class="footer-item">
+              <a href="#" class="footer-link">How it’s made?</a>
+            </li>
+            <li class="footer-item footer-hidden">
+              <a href="#" class="footer-link">Our products</a>
+            </li>
+            <li class="footer-item footer-hidden">
+              <a href="#" class="footer-link">Top sellers</a>
+            </li>
+            <li class="footer-item">
+              <a href="#" class="footer-link">Chocolate is loved</a>
+            </li>
+          </ul>
+          <form class="footer-form">
+            <input
+              class="footer-input"
+              type="text"
+              placeholder="Enter your email"
+            />
+            <button class="btn footer-btn">Subscribe</button>
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
