--- a/index.html
+++ b/index.html
@@ -14,7 +14,53 @@
     <title>Simply Chocolate</title>
   </head>
   <body>
-    <header></header>
+    <header class="header">
+      <div class="container header-container">
+        <div class="logo">
+          <span class="logo-italy">SIMPLY </span> CHOCOLATE
+          <svg class="logo-icon" height="24" width="24">
+            <use href="./img/icons.svg#icon-logo" />
+          </svg>
+        </div>
+        <div class="header-wrapper">
+          <nav class="header-nav">
+            <ul class="header-list">
+              <li class="header-item">
+                <a href="" class="header-link">Home</a>
+              </li>
+              <li class="header-item">
+                <a href="" class="header-link">How it’s made?</a>
+              </li>
+              <li class="header-item">
+                <a href="" class="header-link">Chocolate is loved</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="header-socials">
+            <li class="header-social">
+              <svg height="20" width="20">
+                <use href="./img/icons.svg#icon-instagram" />
+              </svg>
+            </li>
+            <li class="header-social">
+              <svg height="20" width="20">
+                <use href="./img/icons.svg#icon-facebook" />
+              </svg>
+            </li>
+            <li class="header-social">
+              <svg height="20" width="20">
+                <use href="./img/icons.svg#icon-twitter" />
+              </svg>
+            </li>
+          </ul>
+        </div>
+        <div class="hamburger">
+          <span class="hamburger-line"></span>
+          <span class="hamburger-line"></span>
+          <span class="hamburger-line"></span>
+        </div>
+      </div>
+    </header>
     <main>
       <section class="hero">
         <div class="container">
